--- a/Code/ShipWorks/Shipping/Carriers/OneBalanceCreateStampsAccountDialog.xaml
+++ b/Code/ShipWorks/Shipping/Carriers/OneBalanceCreateStampsAccountDialog.xaml
@@ -6,13 +6,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ShipWorks.Shipping.Carriers"
         mc:Ignorable="d"
-        Title="Create Stamps.com Account" Height="450" Width="800">
-    <ui:InteropWindow.Resources>
+        Title="Create Stamps.com Account"
+        Height="400" 
+        Width="600" 
+        WindowStartupLocation="CenterOwner" 
+        ResizeMode="NoResize" >
+    <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="MinWidth" Value="75" />
             <Setter Property="Padding" Value="4,2,4,2" />
         </Style>
-    </ui:InteropWindow.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="9pt"/>
+            <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="MaxWidth" Value="250"/>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -25,11 +34,11 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Image Source="/Resources/ups_from_shipworks.png" Margin="25" Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="250"/>
-        <TextBlock Text="Getting access to great rates with UPS from ShipWorks requires a Stamps.com account." Grid.Row="1" Grid.Column="1" MaxWidth="250" TextWrapping="Wrap"/>
-        <TextBlock Grid.Row="2" Grid.Column="1" MaxWidth="250" TextWrapping="Wrap" Margin="0,10,0,0">
+        <Image Source="/Shipworks.Core;component/Resources/ups_from_shipworks.png" Margin="25" Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="250"/>
+        <TextBlock Text="Getting access to great rates with UPS from ShipWorks requires a Stamps.com account." Grid.Row="1" Grid.Column="1"/>
+        <TextBlock Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,0">
             Please create a Stamps.com account 
-            <Hyperlink NavigateUri="https://registration.stamps.com/registration/#!&amp;p=profile">here</Hyperlink>
+            <Hyperlink Click="Hyperlink_Click">here</Hyperlink>
             and try again.
         </TextBlock>
         <Border BorderBrush="DarkGray" BorderThickness="0,1,0,0" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom">
