--- a/Code/ShipWorks/Shipping/Carriers/OneBalanceCreateStampsAccountDialog.xaml
+++ b/Code/ShipWorks/Shipping/Carriers/OneBalanceCreateStampsAccountDialog.xaml
@@ -10,7 +10,8 @@
         Height="400" 
         Width="600" 
         WindowStartupLocation="CenterOwner" 
-        ResizeMode="NoResize" >
+        ResizeMode="NoResize" 
+        UseLayoutRounding="True">
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="MinWidth" Value="75" />
@@ -34,7 +35,7 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Image Source="/Shipworks.Core;component/Resources/ups_from_shipworks.png" Margin="25" Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="250"/>
+        <Image Margin="0,0,10,25" Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Bottom"  RenderOptions.EdgeMode="Aliased" RenderOptions.BitmapScalingMode="HighQuality" Source="/ShipWorks.Core;component/Resources/ups_from_shipworks.png" Stretch="None"/>
         <TextBlock Text="Getting access to great rates with UPS from ShipWorks requires a Stamps.com account." Grid.Row="1" Grid.Column="1"/>
         <TextBlock Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,0">
             Please create a Stamps.com account 
