--- a/Code/ShipWorks.Shipping.UI/ShippingPanel/ShippingPanelControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/ShippingPanel/ShippingPanelControl.xaml
@@ -184,6 +184,7 @@
                                   Style="{StaticResource Grid.ComboBox.Default}"
                                   HorizontalAlignment="Left"
                                   Width="150"
+                                  SelectedValueProper="{Binding ShipmentType, Mode=TwoWay}"
                                   SelectedValuePath="Value"
                                   DisplayMemberPath="Description"
                                   IsEnabled="{Binding AllowEditing}">
@@ -193,9 +194,6 @@
                                     <Binding Path="InitialShipmentTypeCode" Mode="OneWay" />
                                 </MultiBinding>
                             </ComboBox.ItemsSource>
-                            <ComboBox.SelectedValue>
-                                <Binding Path="ShipmentType" />
-                            </ComboBox.SelectedValue>
                         </ui:ShipWorksComboBox>
 
                         <TextBlock Grid.Column="1" Grid.Row="1" TextWrapping="Wrap">
@@ -245,7 +243,7 @@
                                                               IsEnabled="{Binding SupportsRateShopping, Converter={StaticResource InvertBoolean}}"
                                                               SelectedIndexWhenNull="{x:Static ui:RelativeIndex.First}"
                                                               ui:UpdateWhenMessageReceived.MessageType="{x:Type sw:ShippingAccountsChangedMessage}"
-                                                              SelectedValue="{Binding AccountId}"
+                                                              ui:SelectedValueProper="{Binding AccountId, Mode=TwoWay}"
                                                               DisplayMemberPath="Description"
                                                               SelectedValuePath="AccountId">
                                             <ComboBox.ItemsSource>
@@ -259,6 +257,7 @@
                                                    Style="{StaticResource Grid.TextBlock.Label}">Origin:</TextBlock>
                                         <ui:ShipWorksComboBox Grid.Row="2" Grid.Column="1"
                                                               Style="{StaticResource Grid.ShipWorksComboBox.Default}"
+                                                              SelectedValueProper="{Binding OriginAddressType, Mode=TwoWay}"
                                                               DisplayMemberPath="Key"
                                                               SelectedValuePath="Value"
                                                               SelectedIndexWhenNull="{x:Static ui:RelativeIndex.Last}"
@@ -267,9 +266,6 @@
                                             <ComboBox.ItemsSource>
                                                 <Binding Path="ShipmentType" Converter="{StaticResource ShipmentTypeToOriginAddresses}" Mode="OneWay" />
                                             </ComboBox.ItemsSource>
-                                            <ComboBox.SelectedValue>
-                                                <Binding Path="OriginAddressType" />
-                                            </ComboBox.SelectedValue>
                                         </ui:ShipWorksComboBox>
                                     </Grid>
                                     <ui:Address DataContext="{Binding Origin}">
