--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
@@ -33,7 +33,7 @@
     </i:Interaction.Triggers>
     <DockPanel>
         <StackPanel HorizontalAlignment="Left" Margin="0,0,20,0" DockPanel.Dock="Top" Width="500">
-            <TextBlock Text="ShipWorks One Balance" FontSize="13" Margin="20,10,0,0" FontWeight="Bold"/>
+            <TextBlock Text="One Balance" FontSize="24" Margin="20,10,0,0" FontWeight="Bold"/>
             <ContentControl Visibility="{Binding ShowBanner, Converter={StaticResource ShowWhenTrue}}" IsTabStop="False">
                 <local:OneBalanceEnableUpsBannerWpfControl DataContext="{Binding BannerContext}" Margin="50,15,0,0" />
             </ContentControl>
