--- a/Code/ShipWorks.Installer/Views/InstallPath.xaml
+++ b/Code/ShipWorks.Installer/Views/InstallPath.xaml
@@ -6,16 +6,25 @@
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Install Path"
-    Width="300"
-    Height="300"
-    d:DesignHeight="300"
+    d:DesignHeight="450"
     d:DesignWidth="300"
     DataContext="{Binding Path=InstallPathViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
     <Grid>
-        <StackPanel>
-            <TextBlock Text="Install Path" />
-            <Button Command="{Binding NextCommand}" Content="Next" />
+        <StackPanel Margin="10">
+            <TextBlock>Install Path:</TextBlock>
+            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                <TextBox Width="300"/>
+                <Button Margin="10,0,0,0" Padding="5,2">Browse</Button>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
+                <CheckBox/>
+                <TextBlock Margin="10,0,0,0" Text="Create Desktop Shortcut"/>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Margin="10" Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+            <Button Margin="10,0" Command="{Binding NextCommand}">Next</Button>
+            <Button IsCancel="True">Cancel</Button>
         </StackPanel>
     </Grid>
 </Page>
