--- a/Code/ShipWorks.Installer/Views/Eula.xaml
+++ b/Code/ShipWorks.Installer/Views/Eula.xaml
@@ -15,16 +15,16 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Margin="10">
+        <StackPanel>
             <TextBlock Text="EULA" FontSize="20"/>
             <TextBlock Text="Accept our EULA:" FontSize="15" Margin="0,10,0,0"/>
             <RichTextBox  Margin="0,20,0,0"
-                          Height="400"
+                          Height="380"
                           x:Name="eulaTextBox" />
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1">
-            <Button Margin="10" Command="{Binding NextCommand}" IsDefault="True">I Accept</Button>
-            <Button Margin="10" IsCancel="True">Cancel</Button>
+            <Button Style="{StaticResource SmallPrimaryButton}" Margin="10" Command="{Binding NextCommand}" IsDefault="True">I Accept</Button>
+            <Button Style="{StaticResource SmallSecondaryButton}" Margin="10" IsCancel="True">Cancel</Button>
         </StackPanel>
     </Grid>
 </Page>
