--- a/Code/ShipWorks.Installer/Views/InstallShipworks.xaml
+++ b/Code/ShipWorks.Installer/Views/InstallShipworks.xaml
@@ -5,17 +5,19 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.shipworks.com/ui"
     Title="InstallShipworks"
-    Width="300"
-    Height="300"
     d:DesignHeight="300"
     d:DesignWidth="300"
     DataContext="{Binding Path=InstallShipworksViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
     <Grid>
         <StackPanel>
-            <TextBlock Text="InstallShipworksViewModel" />
-            <Button Command="{Binding NextCommand}" Content="Next" />
+            <TextBlock Text="Installing ShipWorks..." />
+            <ui:WaitSpinner BorderBrush="{x:Null}" HorizontalAlignment="Left" Margin="100,10"/>
+            <TextBlock Text="Did you know we can print labels at a speed of X per second?" TextWrapping="Wrap" Margin="0,10"/>
+            <TextBlock Text="That Works." Margin="0,10"/>
+            <Button Command="{Binding NextCommand}" Content="Next" Margin="0,100,0,0"/>
         </StackPanel>
     </Grid>
 </Page>
