--- a/Code/ShipWorks.Installer/Views/LocationConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/LocationConfig.xaml
@@ -6,16 +6,32 @@
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="LocationConfig"
-    Width="300"
-    Height="300"
     d:DesignHeight="300"
     d:DesignWidth="300"
     DataContext="{Binding Path=LocationConfigViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
     <Grid>
         <StackPanel>
-            <TextBlock Text="LocationConfig" />
-            <Button Command="{Binding NextCommand}" Content="Next" />
+            <TextBlock Style="{StaticResource Header}" Text="Select your desired warehouse for this installation:" />
+            <TextBlock Text="Selecting your warehouse links it with your database, for faster setup across multiple sites."  TextWrapping="Wrap" FontSize="10" Margin="0,10,0,0"/>
+            <ComboBox Style="{StaticResource FormComboBox}" Margin="0,10,0,0" Width="200" HorizontalAlignment="Left"/>
+            <TextBlock Margin="0,20,0,0">
+                Need to enable remote connections? 
+                <Hyperlink NavigateUri="hub.shipworks.com">
+                    Click here.
+                </Hyperlink>
+            </TextBlock>
+            <Border BorderBrush="Black" BorderThickness="0,0,0,1" Margin="0,20,0,0">
+                <TextBlock Text="Advanced Options"/>
+            </Border>
+            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                <CheckBox Style="{StaticResource FormCheckBox}"/>
+                <TextBlock Text="Don't install SQL / connect to my own database" Margin="10,0,0,0"/>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1">
+            <Button Style="{StaticResource SmallPrimaryButton}" Margin="10" Command="{Binding NextCommand}" IsDefault="True">Next</Button>
+            <Button Style="{StaticResource SmallSecondaryButton}" Margin="10" IsCancel="True">Cancel</Button>
         </StackPanel>
     </Grid>
 </Page>
