--- a/Code/ShipWorks.Installer/Views/Login.xaml
+++ b/Code/ShipWorks.Installer/Views/Login.xaml
@@ -6,16 +6,47 @@
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Login"
-    Width="300"
-    Height="300"
     d:DesignHeight="300"
     d:DesignWidth="300"
     DataContext="{Binding Path=LoginViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
     <Grid>
-        <StackPanel>
-            <TextBlock Text="Login" />
-            <Button Command="{Binding NextCommand}" Content="Next" />
-        </StackPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Welcome to ShipWorks! Lets get you setup." Grid.ColumnSpan="4" HorizontalAlignment="Center" Margin="0,10"/>
+        
+        <TextBlock Style="{StaticResource FieldLabel}" Grid.Row="1" Grid.Column="1" Text="Username" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Style="{StaticResource BlueSteelTextBox}" Grid.Row="1" Grid.Column="2" Width="150" VerticalAlignment="Center"/>
+
+        <TextBlock Style="{StaticResource FieldLabel}" Grid.Row="2" Grid.Column="1" Text="Password" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Style="{StaticResource BlueSteelTextBox}" Grid.Row="2" Grid.Column="2" Width="150" VerticalAlignment="Center"/>
+                
+        <Button Style="{StaticResource SmallButton}" Grid.Column="2" Grid.Row="3" Command="{Binding NextCommand}" Content="Sign In" HorizontalAlignment="Center" Width="150" Margin="0,10"/>
+        
+        <TextBlock Grid.Column="2" Grid.Row="4" HorizontalAlignment="Center">
+            <Hyperlink NavigateUri="https://www.interapptive.com/">
+                I don't have a ShipWorks account
+            </Hyperlink>
+        </TextBlock>
+        <TextBlock Grid.Column="2" Grid.Row="5" HorizontalAlignment="Center" Margin="0,10">
+            <Hyperlink NavigateUri="https://www.interapptive.com/">
+                I forgot my password
+            </Hyperlink>
+        </TextBlock>
+
+        <Button Style="{StaticResource SmallSecondaryButton}" Grid.Row="6" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10">Cancel</Button>
     </Grid>
 </Page>
