TP #5: Move needed styles and controls from the ui project into the installer proj to bring down the exe size

--- a/Code/ShipWorks.Installer/App.xaml
+++ b/Code/ShipWorks.Installer/App.xaml
@@ -21,7 +21,7 @@
                 <Setter Property="FontFamily" Value="Roboto"/>
             </Style>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/BlueSteelStyle.xaml" />
+                <ResourceDictionary Source="/ShipWorks.Installer;component/Styles/BlueSteel/BlueSteelStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
