--- a/Code/ShipWorks.Installer/Views/InstallDatabase.xaml
+++ b/Code/ShipWorks.Installer/Views/InstallDatabase.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.shipworks.com/ui"
+    xmlns:c="clr-namespace:ShipWorks.Installer.Controls"
     Title="InstallDatabase"
     d:DesignHeight="300"
     d:DesignWidth="300"
@@ -14,7 +14,7 @@
     <Grid>
         <StackPanel>
             <TextBlock Text="Installing SQL directories..." />
-            <ui:WaitSpinner BorderBrush="{x:Null}" HorizontalAlignment="Left" Margin="100,10"/>
+            <c:WaitSpinner BorderBrush="{x:Null}" HorizontalAlignment="Left" Margin="100,10"/>
             <TextBlock Text="Your database instance can go up to 10GB in size, so you don't need to worry about running our of space any time soon." TextWrapping="Wrap" Margin="0,10"/>
             <TextBlock Text="It just Works." Margin="0,10"/>
             <Button Command="{Binding NextCommand}" Content="Next" Margin="0,100,0,0"/>
