--- a/Code/ShipWorks.Installer/Views/InstallPath.xaml
+++ b/Code/ShipWorks.Installer/Views/InstallPath.xaml
@@ -14,8 +14,8 @@
         <StackPanel Margin="10">
             <TextBlock>Install Path:</TextBlock>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                <TextBox Width="300" Style="{StaticResource BlueSteelTextBox}"/>
-                <Button Style="{StaticResource SmallButton}" Margin="10,0,0,0" Padding="5,2">Browse</Button>
+                <TextBox Width="300" Style="{StaticResource BlueSteelTextBox}" Text="{Binding InstallPath, Mode=TwoWay}"/>
+                <Button Style="{StaticResource SmallButton}" Command="{Binding BrowseCommand}" Margin="10,0,0,0" Padding="5,2">Browse</Button>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
                 <CheckBox Style="{StaticResource FormCheckBox}"/>
