--- a/Code/ShipWorks.Installer/Views/InstallShipworks.xaml
+++ b/Code/ShipWorks.Installer/Views/InstallShipworks.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:ShipWorks.Installer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.shipworks.com/ui"
+    xmlns:c="clr-namespace:ShipWorks.Installer.Controls"
     Title="InstallShipworks"
     d:DesignHeight="300"
     d:DesignWidth="300"
@@ -14,7 +14,7 @@
     <Grid>
         <StackPanel>
             <TextBlock Text="Installing ShipWorks..." />
-            <ui:WaitSpinner BorderBrush="{x:Null}" HorizontalAlignment="Left" Margin="100,10"/>
+            <c:WaitSpinner BorderBrush="{x:Null}" HorizontalAlignment="Left" Margin="100,10"/>
             <TextBlock Text="Did you know we can print labels at a speed of X per second?" TextWrapping="Wrap" Margin="0,10"/>
             <TextBlock Text="That Works." Margin="0,10"/>
             <Button Command="{Binding NextCommand}" Content="Next" Margin="0,100,0,0"/>
